--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<img src="https://images.unsplash.com/photo-1587402092301-725e37c70fd8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZ" alt="Animals have come to mean so much in our lives">
 
 </body>
 
